# Android-For-ESP32S3

./: README.markdown
.github/workflows/: rust.yml
bootloader/: Cargo.toml  bootloader.ino  changelog  flash.sh
bootloader/libraries/lvgl/: lvgl.h
firmware/: init.rc  partitions.csv
firmware/boot/: bootanimation.json
