[package]
edition      = "2024"
name         = "bootloader"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "bootloader"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0.0", features = ["esp32s3", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

critical-section = "1.2.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 'z'
overflow-checks  = false
